Prevent inline code-blocks from wrapping

--- a/styl/screen.styl
+++ b/styl/screen.styl
@@ -51,11 +51,12 @@ pre code
 	font-size inherit;
 
 code
-	background-color rgb(230,230,230);
-	border 1px solid rgb(220,220,220);
-	font-size 0.9em;
-	border-radius 2px;
-	padding 0 0.2em;
+	background-color rgb(230, 230, 230)
+	border 1px solid rgb(220, 220, 220)
+	font-size 0.9em
+	border-radius 2px
+	padding 0 0.2em
+	white-space nowrap
 
 ul
 	margin-bottom 0.6em;
